Fix position of pati description on safari

--- a/public/assets/stylesheets/default.css
+++ b/public/assets/stylesheets/default.css
@@ -2338,7 +2338,7 @@ body { font-family: "MontserratLight", Helvetica, Roboto, Arial, sans-serif; fon
 .pati.getintouch-pati { width: 200px; height: 106px; bottom: 80px; }
 
 /* line 222, ../sass/global.scss */
-.signboard-desc { position: absolute; width: 220px; font-size: 12px; color: #646B6B; left: 50%; bottom: 40px; transform: translate(-50%, 0%); }
+.signboard-desc { position: absolute; width: 220px; font-size: 12px; color: #646B6B; left: 50%; bottom: 40px; transform: translate(-50%, 0%); -webkit-transform: translate(-50%, 0%); }
 
 /* line 234, ../sass/global.scss */
 .sec-about .main-content { position: relative; background: #0A0B0B url("../images/bg-about.jpg") 100% 0 no-repeat; background-size: cover; min-height: 520px; }
